--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "build": "node build/build.js wx"
   },
   "dependencies": {
-    "mpvue": "1.0.18",
+    "mpvue": "^1.0.18",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "mpvue-loader": "^1.1.2",
+    "mpvue-loader": "^1.2.0",
     "mpvue-webpack-target": "^1.0.3",
-    "mpvue-template-compiler": "1.0.18",
+    "mpvue-template-compiler": "^1.0.18",
     "portfinder": "^1.0.13",
     "postcss-mpvue-wxss": "^1.0.0",
     "prettier": "~1.12.1",
