--- a/.babelrc
+++ b/.babelrc
@@ -8,11 +8,10 @@
     }],
     "stage-2"
   ],
-  "plugins": ["transform-runtime"],
+  "plugins": ["transform-runtime", ["component",{"libraryName": "element-ui","styleLibraryName": "theme-chalk"}]],
   "env": {
     "test": {
-      "presets": ["env", "stage-2"],
-      "plugins": ["istanbul"]
+      "presets": ["env", "stage-2"]
     }
   }
 }
