--- a/src/app.json
+++ b/src/app.json
@@ -1,13 +1,11 @@
 {
   "pages": [
-    "pages/index/main",
-    "pages/logs/main",
-    "pages/counter/main"
+    "pages/index/main"
   ],
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
+    "navigationBarTitleText": "weather",
     "navigationBarTextStyle": "black"
   }
 }
