需要解决获取经纬度的延迟的问题

--- a/src/app.json
+++ b/src/app.json
@@ -1,7 +1,8 @@
 {
   "pages": [
-    "pages/region/main",
-    "pages/index/main"
+    
+    "pages/index/main",
+    "pages/region/main"
   ],
   "window": {
     "backgroundTextStyle": "light",
